# d2dtracker_drone_detector

./: CITATION.cff  README.md  package.xml  setup.py  setup.sh
config/: detection_param.yaml  method_1_param.yaml  position_short_best_model.pth  velocity_long_best_model.pth  velocity_mix_best_model.pth  velocity_short_best_model.pth
d2dtracker_drone_detector/: 1.py  basic_image_publisher.py  basic_image_subscriber.py  detected_image_transformation.py  detection.py  detection_by_thresholding_img.py  detection_n.py  detection_node.py  detection_ros_interface.py  drone_detector.py  opencv_test.py  yolo2pose_node.py
launch/: detection.launch.py  opencv_test.launch.xml  yolo2pose.launch.py
src/d2dtracker_drone_detector/: package.xml  setup.cfg  setup.py
src/d2dtracker_drone_detector/launch/: drone_detector.launch  kf_tracker.launch
src/d2dtracker_drone_detector/scripts/: drone_detector.py
test/: test_gru_model.py
